# NoteScout

./: .gitignore  README.md  local.properties  pubspec.yaml
.github/workflows/: dart.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/note_scout/: MainActivity.kt
android/app/src/main/kotlin/edu/augsburg/hci/note_scout/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
backend/: Cargo.toml  README.md  add_user.sql  deploy.sh  init_tables.sql  notescout.service  start.sh
backend/examples/: salt.rs
backend/src/: main.rs  sha256.rs  testpage.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: Uploaddd.dart  camera.dart  converter.dart  edit.dart  faq.dart  folder.dart  forgotpassword.dart  gallery.dart  home.dart  homepage.dart  info.dart  load.dart  loginscreen.dart  main.dart  merge.dart  myaccount.dart  mynotes.dart  newNotes.dart  pdf_text.dart  permission.dart  searchnotes.dart  selectfolder.dart  settings.dart  sidemenu.dart  signup.dart  signuppage.dart  trash.dart  upload.dart  uploaddd.dart  uploader.dart  utility.dart  view.dart  welcome.dart
test/: widget_test.dart
