[package]
name = "backend"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13"
postgres = "0.17"
r2d2 = "0.8"
r2d2_postgres = "0.16"
whoami = "0.9"
async-std = { version = "1.6", features = ["attributes"] }
